--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 # MONGO_URI=mongodb://localhost:27017/team_board
-MONGO_URI=mongodb+srv://sumit:Sumit123@cluster01.opon0oa.mongodb.net/?retryWrites=true&w=majority&appName=Cluster01
+MONGO_URI=mongodb+srv://sumit:Sumit123@cluster01.opon0oa.mongodb.net/team_board?retryWrites=true&w=majority&appName=Cluster01
